// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      222,
      205,
      141,
      227,
      118,
      172,
      25,
      145,
      181,
      79,
      182,
      208,
      217,
      187,
      40,
      10,
      195,
      182,
      91,
      157,
      35,
      122,
      175,
      224,
      144,
      46,
      82,
      244,
      153,
      107,
      32,
      100,
      190,
      179,
      222,
      226,
      71,
      206,
      140,
      248,
      166,
      208,
      141,
      204,
      106,
      133,
      230,
      125,
      126,
      140,
      189,
      112,
      178,
      138,
      18,
      197,
      78,
      170,
      36,
      223,
      97,
      175,
      8,
      15,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      222,
      205,
      141,
      227,
      118,
      172,
      25,
      145,
      181,
      79,
      182,
      208,
      217,
      187,
      40,
      10,
      195,
      182,
      91,
      157,
      35,
      122,
      175,
      224,
      144,
      46,
      82,
      244,
      153,
      107,
      32,
      100,
      190,
      179,
      222,
      226,
      71,
      206,
      140,
      248,
      166,
      208,
      141,
      204,
      106,
      133,
      230,
      125,
      126,
      140,
      189,
      112,
      178,
      138,
      18,
      197,
      78,
      170,
      36,
      223,
      97,
      175,
      8,
      15,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      168,
      38,
      132,
      86,
      23,
      15,
      11,
      63,
      20,
      128,
      173,
      1,
      231,
      43,
      32,
      155,
      118,
      150,
      187,
      236,
      205,
      25,
      23,
      167,
      141,
      56,
      204,
      84,
      36,
      194,
      251,
      245,
      220,
      109,
      177,
      16,
      74,
      221,
      201,
      174,
      3,
      103,
      21,
      168,
      63,
      102,
      218,
      177,
      194,
      7,
      175,
      206,
      218,
      7,
      189,
      88,
      18,
      215,
      253,
      143,
      106,
      1,
      82,
      8,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      222,
      205,
      141,
      227,
      118,
      172,
      25,
      145,
      181,
      79,
      182,
      208,
      217,
      187,
      40,
      10,
      195,
      182,
      91,
      157,
      35,
      122,
      175,
      224,
      144,
      46,
      82,
      244,
      153,
      107,
      32,
      100,
      190,
      179,
      222,
      226,
      71,
      206,
      140,
      248,
      166,
      208,
      141,
      204,
      106,
      133,
      230,
      125,
      126,
      140,
      189,
      112,
      178,
      138,
      18,
      197,
      78,
      170,
      36,
      223,
      97,
      175,
      8,
      15,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      222,
      205,
      141,
      227,
      118,
      172,
      25,
      145,
      181,
      79,
      182,
      208,
      217,
      187,
      40,
      10,
      195,
      182,
      91,
      157,
      35,
      122,
      175,
      224,
      144,
      46,
      82,
      244,
      153,
      107,
      32,
      100,
      190,
      179,
      222,
      226,
      71,
      206,
      140,
      248,
      166,
      208,
      141,
      204,
      106,
      133,
      230,
      125,
      126,
      140,
      189,
      112,
      178,
      138,
      18,
      197,
      78,
      170,
      36,
      223,
      97,
      175,
      8,
      15,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      18,
      121,
      19,
      82,
      241,
      102,
      164,
      224,
      66,
      52,
      193,
      84,
      54,
      41,
      162,
      29,
      51,
      176,
      117,
      154,
      123,
      124,
      124,
      123,
      214,
      88,
      219,
      103,
      163,
      62,
      76,
      25,
    ],
    "type": "Buffer",
  },
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      2,
    ],
    "type": "Buffer",
  },
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      18,
      121,
      19,
      82,
      241,
      102,
      164,
      224,
      66,
      52,
      193,
      84,
      54,
      41,
      162,
      29,
      51,
      176,
      117,
      154,
      123,
      124,
      124,
      123,
      214,
      88,
      219,
      103,
      163,
      62,
      76,
      25,
    ],
    "type": "Buffer",
  },
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      2,
    ],
    "type": "Buffer",
  },
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      222,
      205,
      141,
      227,
      118,
      172,
      25,
      145,
      181,
      79,
      182,
      208,
      217,
      187,
      40,
      10,
      195,
      182,
      91,
      157,
      35,
      122,
      175,
      224,
      144,
      46,
      82,
      244,
      153,
      107,
      32,
      100,
      190,
      179,
      222,
      226,
      71,
      206,
      140,
      248,
      166,
      208,
      141,
      204,
      106,
      133,
      230,
      125,
      126,
      140,
      189,
      112,
      178,
      138,
      18,
      197,
      78,
      170,
      36,
      223,
      97,
      175,
      8,
      15,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      226,
      213,
      194,
      234,
      255,
      213,
      202,
      205,
      231,
      249,
      56,
      43,
      95,
      14,
      60,
      109,
      124,
      104,
      191,
      12,
      222,
      134,
      119,
      55,
      28,
      152,
      207,
      57,
      25,
      230,
      197,
      162,
      203,
      115,
      31,
      139,
      53,
      103,
      210,
      49,
      219,
      139,
      175,
      164,
      15,
      211,
      6,
      65,
      2,
      105,
      152,
      9,
      242,
      127,
      1,
      139,
      196,
      247,
      114,
      134,
      65,
      235,
      155,
      1,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      222,
      205,
      141,
      227,
      118,
      172,
      25,
      145,
      181,
      79,
      182,
      208,
      217,
      187,
      40,
      10,
      195,
      182,
      91,
      157,
      35,
      122,
      175,
      224,
      144,
      46,
      82,
      244,
      153,
      107,
      32,
      100,
      190,
      179,
      222,
      226,
      71,
      206,
      140,
      248,
      166,
      208,
      141,
      204,
      106,
      133,
      230,
      125,
      126,
      140,
      189,
      112,
      178,
      138,
      18,
      197,
      78,
      170,
      36,
      223,
      97,
      175,
      8,
      15,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      226,
      213,
      194,
      234,
      255,
      213,
      202,
      205,
      231,
      249,
      56,
      43,
      95,
      14,
      60,
      109,
      124,
      104,
      191,
      12,
      222,
      134,
      119,
      55,
      28,
      152,
      207,
      57,
      25,
      230,
      197,
      162,
      203,
      115,
      31,
      139,
      53,
      103,
      210,
      49,
      219,
      139,
      175,
      164,
      15,
      211,
      6,
      65,
      2,
      105,
      152,
      9,
      242,
      127,
      1,
      139,
      196,
      247,
      114,
      134,
      65,
      235,
      155,
      1,
    ],
    "type": "Buffer",
  },
]
`;
